remove preview features